# Additive-ML

./: .gitignore  CMakeLists.txt  README.md  a.out  fast-run (copy).sh  fast-run.sh  fcc.sh  identity-main copy.ann  identity-main.ann  main  main-identity.cpp  main-mnist.cpp  main-split.cpp  main.cpp  mnist-combiner-weights.csv  mnist1.ann  requirements.md  split-main.cpp  test.txt  testing  testing.cpp
.cache/clangd/index/: main.cpp.641CC3290056C7BB.idx  nlayer.cpp.7EBC25026CA1D0D2.idx  nlayer.hpp.7EA907E3B43AA0CF.idx  nnetwork.cpp.270BE41B45045AAA.idx  nnetwork.hpp.DAB8FA996C9E5887.idx
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
models/: identity-main.ann  mnist1.ann
modules/: README.md  layer.cpp  nlayer  nlayer.cpp  nlayer.hpp  nnetwork.cpp  nnetwork.hpp
playground/: CMakeLists.txt  conv-fast  conv-fast-2  conv-fast-2.cpp  conv-fast.cpp  eigen-multiply  eigen-multiply.cpp  eigen-resize  eigen-resize.cpp  eigen-test  eigen-test.cpp  eigen3-compile.sh  empty-vector-size.cpp  export_float  export_float.cpp  fast-conv-speed-test  fast-conv-speed-test.cpp  main-backup.cpp  matmul-test  matmul-test.cpp  my-avx.cpp  open-blas  open-blas-3d  open-blas-3d.cpp  open-blas-compile.sh  open-blas-offset  open-blas-offset.cpp  open-blas.cpp  results of speed test.txt  speed-test  speed-test.cpp
playground/link-test/: main  main.cpp
playground/link-test/modules/: nlayer.cpp  nlayer.hpp  nnetwork.cpp  nnetwork.hpp
playground/network/: client3.c  picow_tcp_client.c  server3.c
playground/rough/: rough weigths 1.txt
